Aula 2 do curso de HTML e Css

--- a/Barbearia Alura/index.html
+++ b/Barbearia Alura/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="Pt-br">
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
@@ -7,10 +7,10 @@
 
     </head>
     <body>
-        <header>
-            <h1 class="titulo-principal" >Barberaria Alura <h1>
+        <header class="titulo-principal">
+             Barberaria Alura
         </header>
-        <img id="banner" src="images/banner.jpg" alt="banner">
+        <img id="banner" src="imagens/banner.jpg" alt="banner">
         <div class="principal">
 
             <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
@@ -37,7 +37,7 @@
                 <li>Localização</li>
                 <li>Profissionais Qualificados</li>
             </ul>
-            <img src="images/beneficios.jpg" class="imagembeneficios" alt="beneficios">
+            <img src="imagens/beneficios.jpg" class="imagembeneficios" alt="beneficios">
         </div>
     </body>
 </html>
