Commit da parte 3 - adicionando um forms

--- a/Barbearia Alura/contato.html
+++ b/Barbearia Alura/contato.html
@@ -23,32 +23,41 @@
     <main>
         <form>
             <label for="nomesobrenome">Nome e sobrenome </label>
-            <input type="text" id="nomesobrenome">
+            <input type="text" id="nomesobrenome" class="input-padrao">
 
             <label for="email">Email </label>
-            <input type="email" id="email">
+            <input type="email" id="email" class="input-padrao">
 
             <label for="numero"> Telefone </label>
-            <input type="number" id="numero">
+            <input type="number" id="numero" class="input-padrao">
 
             <label for="mensagem">Mensagem</label>
-            <textarea cols="70" rows="10" id="mensagem"></textarea>
+            <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
             <div>
                 <p>Como prefere o nosso contato ?</p>
-                <label for="radio-email">Email</label>
-                <input type="radio" value="email" id="radio-email">
+                <label for="radio-email">
+                    <input type="radio" value="email" id="radio-email">Email</label>
 
-                <label for="radio-telefone " >Telefone</label>
-                <input type="radio" value="telefone" id="radio-telefone ">
+                <label for="radio-telefone " > <input type="radio" value=
+                        "telefone" id="radio-telefone ">Telefone</label>
 
-                <label for="radio-whatsapp" >Whatsapp</label>
-                <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                <label for="radio-whatsapp" ><input type="radio"  name=
+                        "contato"  value="whatsapp" id="radio-whatsapp">Whatsapp</label>
+            </div>
+            <div>
+                <p>Qual  horário porefere ser atendido?</p>
+                <select>
+                    <option>Manha</option>
+                    <option>Tarde</option>
+                    <option>Noite</option>
+                </select>
+
             </div>
 
 
-            <label><input type="checkbox">Gostaria de receber nossas novidades por email ?</label>>
+            <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por email ?</label>
+            <input type="submit" value="Enviar Formulario">
 
-            <input type="submit" value="enviar formulário">
         </form>
     </main>
 
