--- a/Barbearia Alura/contato.html
+++ b/Barbearia Alura/contato.html
@@ -7,63 +7,87 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="box">
-            <h1><img src="imagens/logo.png"></h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+<header>
+    <div class="box">
+        <h1><img src="imagens/logo.png" alt="logo da barbearia"></h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <main>
-        <form>
-            <label for="nomesobrenome">Nome e sobrenome </label>
-            <input type="text" id="nomesobrenome" class="input-padrao">
+<main>
+    <form>
+        <label for="nomesobrenome">Nome e sobrenome </label>
+        <input type="text" id="nomesobrenome" class="input-padrao" required>
 
-            <label for="email">Email </label>
-            <input type="email" id="email" class="input-padrao">
+        <label for="email">Email </label>
+        <input type="email" id="email" class="input-padrao" required placeholder="exemplo@exemplo.com">
 
-            <label for="numero"> Telefone </label>
-            <input type="number" id="numero" class="input-padrao">
+        <label for="numero"> Telefone </label>
+        <input type="tel" id="numero" class="input-padrao" required placeholder="(XX)XXXXX-XXXX">
 
-            <label for="mensagem">Mensagem</label>
-            <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
-            <div>
-                <p>Como prefere o nosso contato ?</p>
-                <label for="radio-email">
-                    <input type="radio" value="email" id="radio-email">Email</label>
+        <label for="mensagem">Mensagem</label>
+        <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+        <fieldset>
+            <legend>Como prefere o nosso contato ?</legend>
+            <label for="radio-email">
+                <input type="radio" value="email" id="radio-email">Email</label>
 
-                <label for="radio-telefone " > <input type="radio" value=
-                        "telefone" id="radio-telefone ">Telefone</label>
+            <label for="radio-telefone "> <input type="radio" value=
+                    "telefone" id="radio-telefone ">Telefone</label>
 
-                <label for="radio-whatsapp" ><input type="radio"  name=
-                        "contato"  value="whatsapp" id="radio-whatsapp">Whatsapp</label>
-            </div>
-            <div>
-                <p>Qual  horário porefere ser atendido?</p>
-                <select>
-                    <option>Manha</option>
-                    <option>Tarde</option>
-                    <option>Noite</option>
-                </select>
+            <label for="radio-whatsapp"><input type="radio" name=
+                    "contato" value="whatsapp" id="radio-whatsapp" checked> Whatsapp</label>
+        </fieldset>
+        <fieldset>
+            <legend>Qual horário porefere ser atendido?</legend>
+            <select>
+                <option>Manha</option>
+                <option>Tarde</option>
+                <option>Noite</option>
+            </select>
 
-            </div>
+        </fieldset>
 
 
-            <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por email ?</label>
-            <input type="submit" value="Enviar Formulario">
+        <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email ?</label>
+        <input class="enviar" type="submit" value="Enviar Formulario">
 
-        </form>
-    </main>
+    </form>
+    <table>
+        <thead>
+            <tr>
+                <th>Dia</th>
+                <th>Horário</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Segunda</td>
+                <td>8h-20h</td>
+            </tr>
+            <tr>
+                <td>Quarta</td>
+                <td>8h-20h</td>
+            </tr>
+            <tr>
+                <td>Sexta</td>
+                <td>8h-20h</td>
+            </tr>
+        </tbody>
 
-    <footer>
-        <img src="imagens/logo-branco.png">
-        <p class="copyright">&copy; copyright Barbearia Alura -2020 </p>
-    </footer>
+
+    </table>
+</main>
+
+<footer>
+    <img src="imagens/logo-branco.png" alt="logo da barbearia">
+    <p class="copyright">&copy; copyright Barbearia Alura -2020 </p>
+</footer>
 </body>
 </html>
