--- a/Barbearia Alura/contato.html
+++ b/Barbearia Alura/contato.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <div class="box">
-        <h1><img src="imagens/logo.png" alt="logo da barbearia"></h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <header>
+        <div class="box">
+            <h1><img src="imagens/logo.png" alt="logo da barbearia"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Products.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 <main>
     <form>
@@ -57,6 +57,7 @@
 
         <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email ?</label>
         <input class="enviar" type="submit" value="Enviar Formulario">
+        <link href = "https://fonts.googleapis.com/css2? family = Montserrat & display = swap" rel = "stylesheet">
 
     </form>
     <table>
