--- a/Barbearia Alura/index.html
+++ b/Barbearia Alura/index.html
@@ -3,17 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style-home.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     </head>
     <body>
-        <header class="titulo-principal">
-             Barberaria Alura
+        <header>
+            <div class="box">
+                <h1><img src="imagens/logo.png" alt="logo da barbearia"></h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Products.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <img id="banner" src="imagens/banner.jpg" alt="banner">
-        <div class="principal">
 
-            <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+    <img class="banner" src="imagens/banner.jpg" alt="banner">
+    <main>
+        <section class="principal">
+
+            <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+            <img class="utensilios" src="imagens/utensilios.jpg" alt="utensilios de um barbeiro">
 
             <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
                 seu
@@ -28,9 +43,17 @@
                 O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos
                 clientes.</p>
 
-        </div>
-        <div class="beneficios" >
-            <h3 class="titulo-centralizado">Benefícios</h3>
+        </section>
+        <section class="mapa">
+            <h3 class="titulo-principal"> Nosso estabelecimento </h3>
+            <p> Nosso estabelecimento está localizado em </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d53897.981524584044!2d
+            -47.950038583373136!3d-15.83387469071949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x935a25509546ef29%3A0x4541ec19d95f6bca!2sAsa%20Sul%20Superquadra%20Sul%20414%20-%20Asa%20Sul%2C%20Bras%C3%ADlia%20-%20DF%2C%20Brasil!3m2!1d
+            -15.8338775!2d-47.9150189!5e1!3m2!1spt-BR!2sbr!4v1602041269196!5m2!1spt-BR!2sbr" width="100%" height="300"
+                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </section>
+        <section class="beneficios" >
+            <h3 class="titulo-principal">Benefícios</h3>
             <ul class="items">
                 <li>Atendimento aos clientes</li>
                 <li>Espaço diferenciado</li>
@@ -38,6 +61,11 @@
                 <li>Profissionais Qualificados</li>
             </ul>
             <img src="imagens/beneficios.jpg" class="imagembeneficios" alt="beneficios">
-        </div>
+        </section>
+    </main>
+    <footer>
+        <img src="imagens/logo-branco.png" alt="logo da barbearia">
+        <p class="copyright">&copy; copyright Barbearia Alura -2020 </p>
+    </footer>
     </body>
 </html>
