Commit da parte 6 - finalizando o curso

--- a/Barbearia Alura/index.html
+++ b/Barbearia Alura/index.html
@@ -2,6 +2,7 @@
 <html lang="Pt-br">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device=width">
         <title>Barbearia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
@@ -47,20 +48,30 @@
         <section class="mapa">
             <h3 class="titulo-principal"> Nosso estabelecimento </h3>
             <p> Nosso estabelecimento está localizado em </p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d53897.981524584044!2d
+            <div class="mapa-conteudo">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d53897.981524584044!2d
             -47.950038583373136!3d-15.83387469071949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x935a25509546ef29%3A0x4541ec19d95f6bca!2sAsa%20Sul%20Superquadra%20Sul%20414%20-%20Asa%20Sul%2C%20Bras%C3%ADlia%20-%20DF%2C%20Brasil!3m2!1d
             -15.8338775!2d-47.9150189!5e1!3m2!1spt-BR!2sbr!4v1602041269196!5m2!1spt-BR!2sbr" width="100%" height="300"
-                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
         </section>
         <section class="beneficios" >
             <h3 class="titulo-principal">Benefícios</h3>
-            <ul class="items">
-                <li>Atendimento aos clientes</li>
-                <li>Espaço diferenciado</li>
-                <li>Localização</li>
-                <li>Profissionais Qualificados</li>
-            </ul>
-            <img src="imagens/beneficios.jpg" class="imagembeneficios" alt="beneficios">
+            <div class="contudo-beneficios">
+                <ul class="lista-beneficios">
+                    <li class="items">Atendimento aos clientes</li>
+                    <li class="items">Espaço diferenciado</li>
+                    <li class="items">Localização</li>
+                    <li class="items">Profissionais Qualificados</li>
+                    <li class="items">Pontualidade</li>
+                    <li class="items">Limpeza</li>
+                </ul><img src="imagens/beneficios.jpg" class="imagembeneficios" alt="beneficios">
+            </div>
+
+            <div class="video">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay;
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </section>
     </main>
     <footer>
